--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,15 @@ services:
     ports:
       - 8080:8080
 
+  #app:
+  #  build:
+  #    context: .
+  #    target: production
+  #  ports:
+  #    - 3001:3001
+  #  command: npm run start:prod
+  #  depends_on:
+  #    - db
+
 volumes:
   db_data:
